@@ -1,3 +1,8 @@
+2004-02-27  Hannes Reinecke  <hare@suse.de>
+
+	* config/tc-s390.c (s390_insn): Correct range check for opcode in
+	.insn pseudo operation.
+
 2004-02-27  Anil Paranjpe  <anilp1@kpitcummins.com>
 
 	* config/tc-sh.c (get_operand):  In case of #Imm, check has been
